8224110: [lworld] Reflective method invocation fails with assert: "illegal type"

Reviewed-by: mchung